test/fail/case_name00.v3
//@execute 0=12; 1=12; 2=43
type E { case A(a: int); case B(b: int); }
def main(a: int) -> int {
	if (a == 0) return 11 + E.A.name.length;
	if (a == 1) return 11 + E.B.name.length;
	return 43;
}